--- a/index.html
+++ b/index.html
@@ -1,146 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Мама дома - Минск</title>
-    </head>
+<html lang="ru">
 
-    <body>
-        <header class="header">
-            https://www.youtube.com/watch?v=bcvMx7HoWz8
-            <div class="wrapper">
-                <h1 class="h1__search">Мама дома</h1>
+<head>
+    <meta charset="UTF-8" />
+
+    <!-- Мета теги -->
+    <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
+    <!-- <script charset="utf-8" src="https://api-maps.yandex.ru/services/coverage/v2/?l=map&amp;ll=27.59240700,53.90014800&amp;z=11&amp;lang=ru_RU&amp;callback=jsonp_yandex_coverage__l_map_ll_27_59240700_53_90014800_z_11_lang_ru_RU"></script> -->
+    <!-- <meta property="og:url" content="https://mama-doma.by">
+		<meta property="og:title" content="КАФЕ НА ФУДКОРТАХ МАМА ДОМА">
+		<meta property="og:description" content="Если Мама Дома - значит еда будет вкусной и полезной!">
+		<meta property="og:type" content="website"> -->
+    <!-- <meta property="og:image" content="/img/meta_img.jpg">
+		<link rel="canonical" href="http://mama-doma.by">
+		<meta property="fb:app_id" content="257953674358265">
+		<meta name="format-detection" content="telephone=no"> -->
+    <!-- <meta http-equiv="x-dns-prefetch-control" content="on"> -->
+    <!-- _________________________ -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Мама дома - Минск</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="font/stylesheet.css">
+    <link rel="stylesheet" href="style/style.css">
+</head>
+
+<body>
+    <h1 class="visuallyhidden">Мама дома</h1>
+    <header class="header">
+        <!-- https://www.youtube.com/watch?v=bcvMx7HoWz8 -->
+        <div class="wrapper__header">
+            <div class="header__top">
                 <a href="#" class="logo">
-                    <img src="/image/newLogo.PNG" alt="мама дома">
+                    <img src="/img/newLogo.PNG" alt="мама дома">
                 </a>
                 <nav class="header__navigation">
                     <ul class="navigatin">
-                        <li>Заказать</li>   
-                        <li>Меню</li>
-                        <li>Рестораны</li>
-                        <li>Вакансии</li>
+                        <li class="navigatin__link"><a href="#">Меню</a></li>
+                        <li class="navigatin__link"><a href="#">Доставка</a></li>
+                        <li class="navigatin__link"><a href="#">Рестораны на фудкортах</a></li>
+                        <li class="navigatin__link"><a href="#">Работа</a></li>
+                        <li class="navigatin__link"><a href="#">Контакты</a></li>
+                        <li class="navigatin__link"><a href="#">Отзывы</a></li>
                     </ul>
                 </nav>
-                <div class="header__language">
-                    <a href="#">РУС</a>
-                    <a href="#">БЕЛ</a>
-                </div>
+
                 <div class="header__region">
+                    <div class="header__language">
+                        <a href="#">РУС</a>
+                        <span></span>
+                        <a href="#">БЕЛ</a>
+                    </div>
                     <div class="region__now">
                         <span class="region__icon">ico</span>
                         <div>Минск</div>
                     </div>
                     <div class="region__select">
-                        <select name="" id="">
-                            <option><a href="#">Минск</a></option>
-                            <option><a href="#">Гомель</a></option>
-                            <option><a href="#">Брест</a></option>
-                        </select>
+                        <a href="#">Минск</a>
+                        <div class="dropdown">
+                            <a class="dropbtn">Минск</a>
+                            <div class="dropdown-content">
+                                <a href="#">Брест</a>
+                                <a href="#">Гомель</a>
+                                <a href="#">Могилев</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </header>
-        <section class="promo">
-            <div class="wrapper">
-                <div class="promo__title">
-                    <span class="promo__title-year">Работаем с 2015 г.</span>
-                    <div class="promo__title-img">
-                        <img src="#" alt="мама дома" />
-                    </div>
-                    <span class="promo__title-description">- Домашняя кухня в быстром формате -</span>
+            <div class="promo__title">
+                <span class="promo__title-year">Работаем с 2015 года</span>
+                <div class="promo__title-img">
+                    <img src="#" alt="мама дома" />
                 </div>
-                <div>
-                    <img src="#" alt="gif" />
+                <span class="promo__title-description">- Домашняя кухня в быстром формате -</span>
+            </div>
+            <div>
+                <img src="#" alt="gif" />
+            </div>
+        </div>
+    </header>
+
+    <section class="feedback">
+        <div class="wrapper">
+            <h2>- Наши ссылки -</h2>
+            <div class="feedback__to-menu">
+                <a href="#" class="link__to-menu">menu.by</a>
+            </div>
+            <div class="feedback__to-feedback">
+                <a href="#" class="link__to-feedback">оставь отзыв</a>
+            </div>
+        </div>
+    </section>
+    <section class="menu">
+        <div class="wrapper">
+            <div class="menu__title">
+                <h2>- Меню -</h2>
+            </div>
+            <div class="layout-3-column">
+                <div class="menu__item">
+                    <a href="#">Драники</a>
+                </div>
+                <div class="menu__item">
+                    <a href="#">Сытные блины</a>
+                </div>
+                <div class="menu__item">
+                    <a href="#">Горячее</a>
+                </div>
+                <div class="menu__item">
+                    <a href="#">Сладкие блины</a>
+                </div>
+                <div class="menu__item">
+                    <a href="#">Супы</a>
+                </div>
+                <div class="menu__item">
+                    <a href="#">Напитки</a>
                 </div>
             </div>
-        </section>
-        <section class="feedback">
-            <div class="wrapper">
-                <div class="feedback__to-menu">
-                    <a href="#" class="link__to-menu">menu.by</a>
+        </div>
+    </section>
+    <section class="about-us">
+        <div class="wrapper">
+            <div class="work">
+                <div class="work__logo">
+                    <img src="#" alt="мама дома" />
                 </div>
-                <div class="feedback__to-feedback">
-                    <a href="#" class="link__to-feedback">оставь отзыв</a>
+                <h2>С нами приятно работать!</h2>
+                <span>Станьте частью нашей команды</span>
+                <div class="work__button">
+                    <button class="about-us__button">Оставьте заявку</button>
                 </div>
-            </div>
-        </section>
-        <section class="menu">
-            <div class="wrapper">
-                <div class="menu__title">
-                    <h3>- Меню -</h3>
-                </div>
-                <div class="layout-3-column">
-                    <div class="menu__item">
-                        <a href="#">Драники</a>
+                <div class="instagram">
+                    <div class="instagram__logo">
+                        <img src="#" alt="инстаграм" />
                     </div>
-                    <div class="menu__item">
-                        <a href="#">Сытные блины</a>
-                    </div>
-                    <div class="menu__item">
-                        <a href="#">Горячее</a>
-                    </div>
-                    <div class="menu__item">
-                        <a href="#">Сладкие блины</a>
-                    </div>
-                    <div class="menu__item">
-                        <a href="#">Супы</a>
-                    </div>
-                    <div class="menu__item">
-                        <a href="#">Напитки</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="about-us">
-            <div class="wrapper">
-                <div class="work">
-                    <div class="work__logo">
-                        <img src="#" alt="мама дома" />
-                    </div>
-                    <h3>С нами приятно работать!</h3>
-                    <span>Станьте частью нашей команды</span>
+                    <h3>Наш инстаграм</h3>
+                    <span>Подписывайтесь, и Вам плюс в карму</span>
                     <div class="work__button">
-                        <button class="about-us__button">Оставьте заявку</button>
-                    </div>
-                    <div class="instagram">
-                        <div class="instagram__logo">
-                            <img src="#" alt="инстаграм" />
-                        </div>
-                        <h3>Наш инстаграм</h3>
-                        <span>Подписывайтесь, и Вам плюс в карму</span>
-                        <div class="work__button">
-                            <button class="about-us__button">Перейти в инстаграмм</button>
-                        </div>
-                </div>
-            </div>
-        </section>
-        <section class="map">
-            <div class="wrapper">
-                <div class="map__title">
-                    <h2>- Наши рестораны -</h2>
-                </div>
-                <div class="map__yandex">
-                    Карта яндекс с метками
-                </div>
-            </div>
-        </section>
-        <footer class="footer">
-            <div class="wrapper">
-                <div class="footer__logo">
-                    <img src="#" alt="logo">
-                </div>
-                <div class="footer__contacts">
-                    <div class="footer__mail">
-                        <span class="ico__mail"></span>
-                        <a href="#">Director@mama-doma.by</a>
-                    </div>
-                    <div class="footer__phone">
-                        <span class="ico__phone"></span>
-                        <a href="#">+375 (17) 224 84 41</a>
+                        <button class="about-us__button">Перейти в инстаграмм</button>
                     </div>
                 </div>
             </div>
-        </footer>
-    </body>    
+    </section>
+    <section class="map">
+        <div class="wrapper">
+            <div class="map__title">
+                <h2>- Наши рестораны -</h2>
+            </div>
+            <div class="map__yandex">
+                Карта яндекс с метками
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__logo">
+                <img src="#" alt="logo">
+            </div>
+            <div class="footer__contacts">
+                <div class="footer__mail">
+                    <span class="ico__mail"></span>
+                    <a href="#">Director@mama-doma.by</a>
+                </div>
+                <div class="footer__phone">
+                    <span class="ico__phone"></span>
+                    <a href="#">+375 (17) 224 84 41</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
 </html>
