--- a/index.html
+++ b/index.html
@@ -52,31 +52,26 @@
                         <a href="#">БЕЛ</a>
                     </div>
                     <div class="region__now">
-                        <span class="region__icon">ico</span>
-                        <div>Минск</div>
+                        <span class="ico ico_region"></span>
+                        <div class="region__now_label">Минск</div>
                     </div>
-                    <div class="region__select">
-                        <a href="#">Минск</a>
-                        <div class="dropdown">
-                            <a class="dropbtn">Минск</a>
-                            <div class="dropdown-content">
-                                <a href="#">Брест</a>
-                                <a href="#">Гомель</a>
-                                <a href="#">Могилев</a>
-                            </div>
+                    <div class="dropdown">
+                        <a class="dropbtn">Регионы</a>
+                        <div class="dropdown-content">
+                            <a href="#">Брест</a>
+                            <a href="#">Гомель</a>
+                            <a href="#">Могилев</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="promo__title">
-                <span class="promo__title-year">Работаем с 2015 года</span>
-                <div class="promo__title-img">
-                    <img src="#" alt="мама дома" />
-                </div>
-                <span class="promo__title-description">- Домашняя кухня в быстром формате -</span>
+            <div class="wrapper__gif">
+                <img src="../../img/GIF.gif" class="gif" />
             </div>
-            <div>
-                <img src="#" alt="gif" />
+            <div class="promo__title">
+                <p class="promo__title-year">Работаем с 2015 года</p>
+                <span class="promo__title-span"></span>
+                <p class="promo__title-description">— Домашняя кухня в быстром формате —</p>
             </div>
         </div>
     </header>
@@ -159,11 +154,11 @@
             </div>
             <div class="footer__contacts">
                 <div class="footer__mail">
-                    <span class="ico__mail"></span>
+                    <span class="ico ico_mail"></span>
                     <a href="#">Director@mama-doma.by</a>
                 </div>
                 <div class="footer__phone">
-                    <span class="ico__phone"></span>
+                    <span class="ico ico_phone"></span>
                     <a href="#">+375 (17) 224 84 41</a>
                 </div>
             </div>
