--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="font/stylesheet.css" />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/sweetalert.min.css" />
     <script src="https://api-maps.yandex.ru/2.1/?apikey=b0ef4691-ef56-4fa7-88fb-d774eb4837e1&lang=ru_RU"
         type="text/javascript"></script>
 </head>
@@ -41,11 +42,11 @@
                 <nav class="header__navigation">
                     <ul class="navigatin">
                         <li class="navigatin__link"><a href="#menu">Меню</a></li>
-                        <li class="navigatin__link"><a href="#">Доставка</a></li>
+                        <li class="navigatin__link"><a href="#feedback">Доставка</a></li>
                         <li class="navigatin__link"><a href="#mapTo">Рестораны на фудкортах</a></li>
                         <li class="navigatin__link"><a href="#about-us">Работа</a></li>
-                        <li class="navigatin__link"><a href="#about-us">Контакты</a></li>
-                        <li class="navigatin__link"><a href="#feedback">Отзывы</a></li>
+                        <li class="navigatin__link"><a href="#map">Контакты</a></li>
+                        <li class="navigatin__link"><a href="#about-us">Отзывы</a></li>
                     </ul>
                 </nav>
 
@@ -84,14 +85,12 @@
             <img src="/img/icons/up-arrow.png" alt="стрелка вверх" />
         </a>
         <div class="wrapper feedback__wrapper">
-            <h2>— Наши ссылки —</h2>
+            <h2>— Доставка —</h2>
             <div class="feedback__layout layout-2-column">
                 <div class="feedback__to-menu">
                     <a href="#" class="feedback__links link__to-menu _anim-items"></a>
                 </div>
-                <div class="feedback__to-feedback">
-                    <a href="#popup" class="feedback__links link__to-feedback _anim-items popup-link"></a>
-                </div>
+                <div class="feedback__to-feedback"></div>
             </div>
         </div>
     </section>
@@ -102,7 +101,7 @@
             </div>
             <div class="menu__layout layout-3-column">
                 <div class="menu__item">
-                    <a class="menu__links menu__to-0 _anim-items" href="#"></a>
+                    <a class="menu__links menu__to-0 _anim-items" href="/menu.html"></a>
                 </div>
                 <div class="menu__item">
                     <a class="menu__links menu__to-1 _anim-items" href="#"></a>
@@ -134,11 +133,11 @@
             </div>
             <div class="about-us__instagram about-us__items _anim-items">
                 <a href="#" class="logo_instagram">
-                    <img src="/img/icons/instagram.png" alt="instagram" />
+                    <img src="/img/icons/like.png" alt="instagram" />
                 </a>
-                <h3>Наш инстаграм</h3>
-                <span>Подписывайтесь, и Вам плюс в карму</span>
-                <button class="about-us__button">Перейти в инстаграмм</button>
+                <h3>Оставьте отзыв</h3>
+                <span>И мы станем еще лучше</span>
+                <button href="#popup" class="about-us__button popup-link">Оставить отзыв</button>
             </div>
         </div>
     </section>
@@ -178,25 +177,28 @@
                 <form>
                     <div class="form-inner">
                         <input type="text" name="name" value required placeholder="Ваше имя"
-                            oninvalid="this.setCustomValidity('Забыли имя')" oninput="setCustomValidity('')">
+                            oninvalid="this.setCustomValidity('Забыли имя')" oninput="setCustomValidity('')" />
                         <input type="tel" name="phone" id="phone" value required placeholder="Ваш телефон"
-                            oninvalid="this.setCustomValidity('Забыли телефон')" oninput="setCustomValidity('')">
+                            oninvalid="this.setCustomValidity('Забыли телефон')" oninput="setCustomValidity('')" />
                         <textarea name="feedback" required placeholder="Напишите свой отзыв..." rows="3"
                             oninvalid="this.setCustomValidity('Забыли отзыв')"
                             oninput="setCustomValidity('')"></textarea>
-                        <input type="submit" value="Оставить отзыв">
+                        <input type="submit" value="Оставить отзыв" />
                     </div>
                 </form>
                 <p class="popup__text">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности</p>
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/lib/sweetalert.min.js"></script>
+    <script src="js/yandexMap.js"></script>
     <script src="js/animationScroll.js"></script>
     <script src="js/ancors.js"></script>
     <script src="js/popup.js"></script>
-    <script src="js/yandexMap.js"></script>
     <script src="js/lib/inputmask.min.js"></script>
     <script src="js/mask.js"></script>
+    <script src="js/form.js"></script>
 </body>
 
 </html>
