--- a/menu.html
+++ b/menu.html
@@ -24,11 +24,10 @@
     <link rel="stylesheet" href="style/style.css" />
 </head>
 
-<body>
+<body class="body__menu-page">
     <h1 class="visuallyhidden">Мама дома меню</h1>
     <header class="menu-page-header">
-        <div class="wrapper menu-page-header__wrapper">
-
+        <div class="menu-page-header__wrapper">
             <a href="#" class="logo">
                 <img src="/img/newLogo.PNG" alt="мама дома" />
             </a>
@@ -42,19 +41,86 @@
                     <li class="menu-page__link"><a href="#about-us">Отзывы</a></li>
                 </ul>
             </nav>
+            <div class="header__region">
+                <div class="header__language">
+                    <a href="#" class="header__language_active">РУС</a>
+                    <span></span>
+                    <a href="#">БЕЛ</a>
+                </div>
+                <div class="region__now">
+                    <span class="ico ico_region"></span>
+                    <div class="region__now_label">Минск</div>
+                </div>
+                <div class="dropdown">
+                    <a class="dropbtn">Регионы</a>
+                    <div class="dropdown-content">
+                        <a href="#">Брест</a>
+                        <a href="#">Гомель</a>
+                        <a href="#">Могилев</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <section class="menu-page-items">
         <div class="wrapper menu-page-items__wrapper">
-            <div class="menu-page__wrapper wrapper">
-
-                <div class="menu-page__title">
-                    <h2>— Меню —</h2>
+            <div class="menu-page__title">
+                <h2>— Драники —</h2>
+            </div>
+            <div class="menu-page__layout layout-3-column">
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
                 </div>
-                <div class="menu-page__layout layout-3-column">
-                    <div class="menu-page__item">
-                    </div>
-
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
+                </div>
+                <div class="menu__item menu-page__links _anim-items bgcacent">
+                    <span class="menu-page__image menu-page__image_0"></span>
+                    <p class="menu-page__price">4.5 р.</p>
+                    <h4>Мамины драники</h4>
+                    <p class="menu-page__kalories">350 ккал</p>
                 </div>
             </div>
         </div>
@@ -76,6 +142,7 @@
             <span>Сайт разработан <a href="#"> Qwes</a></span>
         </div>
     </footer>
+    <script src="js/animationScroll.js"></script>
 </body>
 
 </html>
