--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <body>
         <h1 class="visuallyhidden">Мама дома</h1>
         <header class="header" id="header">
+            <span class="hamburger">
+                <span class="hamburger__line"></span>
+            </span>
             <div class="header__intro">
                 <video
                     class="header__intro-video"
@@ -52,7 +55,6 @@
                             <li class="navigatin__link"><a href="#menu">Меню</a></li>
                             <li class="navigatin__link"><a href="#feedback">Доставка</a></li>
                             <li class="navigatin__link"><a href="#mapTo">Рестораны на фудкортах</a></li>
-                            <li class="navigatin__link"><a href="#about-us">Работа</a></li>
                             <li class="navigatin__link"><a href="#map">Контакты</a></li>
                             <li class="navigatin__link"><a href="#about-us">Отзывы</a></li>
                         </ul>
