--- a/index.html
+++ b/index.html
@@ -32,24 +32,15 @@
     <body>
         <h1 class="visuallyhidden">Мама дома</h1>
         <header class="header" id="header">
-            <span class="hamburger">
-                <span class="hamburger__line"></span>
-            </span>
             <div class="header__intro">
-                <video
-                    class="header__intro-video"
-                    src="/video/videoplayback.mp4"
-                    poster="/img/bg_no_youtube.jpg"
-                    autoplay
-                    muted
-                    loop
-                ></video>
+                <video class="header__intro-video" src="/video/1.mp4" poster="/img/bg_no_youtube.jpg" autoplay muted loop></video>
             </div>
             <div class="wrapper__header">
                 <div class="header__top">
                     <a href="#" class="logo">
                         <img src="/img/newLogo.PNG" alt="мама дома" />
                     </a>
+
                     <nav class="header__navigation">
                         <ul class="navigatin">
                             <li class="navigatin__link"><a href="#menu">Меню</a></li>
@@ -59,7 +50,12 @@
                             <li class="navigatin__link"><a href="#about-us">Отзывы</a></li>
                         </ul>
                     </nav>
-
+                    <span class="hamburger">
+                        <span class="hamburger__line"></span>
+                    </span>
+                    <span class="hamburger-region">
+                        <span class="hamburger-region__line"></span>
+                    </span>
                     <div class="header__region">
                         <div class="header__language">
                             <a href="#" class="header__language_active">РУС</a>
