--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         <h1 class="visuallyhidden">Мама дома</h1>
         <header class="header" id="header">
             <div class="header__intro">
-                <video class="header__intro-video" src="/video/1.mp4" poster="/img/bg_no_youtube.jpg" autoplay muted loop></video>
+                <video
+                    class="header__intro-video"
+                    src="video/videoplayback.mp4"
+                    poster="/img/bg_no_youtube.jpg"
+                    autoplay
+                    muted
+                    loop
+                ></video>
             </div>
             <div class="wrapper__header">
                 <div class="header__top">
@@ -92,7 +99,10 @@
             </a>
             <div class="wrapper feedback__wrapper">
                 <h2>— Доставка —</h2>
-                <div class="feedback__layout layout-2-column">
+                <div class="feedback__layout-delivery layout-2-column">
+                    <div class="feedback__to-menu">
+                        <a href="#" class="feedback__links link__to-menu _anim-items"></a>
+                    </div>
                     <div class="feedback__to-menu">
                         <a href="#" class="feedback__links link__to-menu _anim-items"></a>
                     </div>
