--- a/index.html
+++ b/index.html
@@ -138,22 +138,25 @@
             </div>
         </section>
         <section class="about-us" id="about-us">
-            <div class="about-us__wrapper wrapper layout-2-column">
-                <div class="about-us__work about-us__items _anim-items">
-                    <a href="#" class="logo">
-                        <img src="/img/newLogo.PNG" alt="мама дома" />
-                    </a>
-                    <h3>С нами приятно работать!</h3>
-                    <span>Станьте частью нашей команды</span>
-                    <button class="about-us__button">Оставьте заявку</button>
-                </div>
-                <div class="about-us__instagram about-us__items _anim-items">
-                    <a href="#" class="logo_instagram">
-                        <img src="/img/icons/like.png" alt="instagram" />
-                    </a>
-                    <h3>Оставьте отзыв</h3>
-                    <span>И мы станем еще лучше</span>
-                    <button href="#popup" class="about-us__button popup-link">Оставить отзыв</button>
+            <div class="about-us__wrapper wrapper">
+                <h2>— Отзывы —</h2>
+                <div class="layout-2-column">
+                    <div class="about-us__work about-us__items _anim-items">
+                        <a href="#" class="logo">
+                            <img src="/img/newLogo.PNG" alt="мама дома" />
+                        </a>
+                        <h3>С нами приятно работать!</h3>
+                        <span>Станьте частью нашей команды</span>
+                        <button class="about-us__button">Оставьте заявку</button>
+                    </div>
+                    <div class="about-us__instagram about-us__items _anim-items">
+                        <a href="#" class="logo_instagram">
+                            <img src="/img/icons/like.png" alt="instagram" />
+                        </a>
+                        <h3>Оставьте отзыв</h3>
+                        <span>И мы станем еще лучше</span>
+                        <button href="#popup" class="about-us__button popup-link">Оставить отзыв</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -163,7 +166,7 @@
                     <h2>— Контакты —</h2>
                 </div>
                 <div class="feedback__layout">
-                    <div class="feedback__to-menu">
+                    <div class="feedback__contacts _anim-items">
                         <div class="contacts__item">
                             <div>
                                 <h4>ТРЦ “Dana Mall”, фудкорт 3 этаж</h4>
