--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<meta name="format-detection" content="telephone=no"> -->
         <!-- <meta http-equiv="x-dns-prefetch-control" content="on"> -->
         <!-- _________________________ -->
-
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <title>Мама дома - Минск</title>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="font/stylesheet.css" />
