--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     autoplay
                     muted
                     loop
+                    playsinline
                 ></video>
             </div>
             <div class="wrapper__header">
